# kegg-pathways-completeness-tool

./: .pre-commit-config.yaml  .travis.yml  README.md  docker_push.sh  download.sh  new_modules.txt  pyproject.toml  pytest.ini  requirements.txt  statistics.py  update_summary.md
.github/workflows/: .check_api.yml  ci.yml  create_release.yml  lint.yml  python-publish-pypi.yml  python-publish-test.yml  python-publish.yml  update_database.yml
Files/: example.fasta
Files/output/: example_hmmscan.tbl  example_hmmscan_tab.tbl  matching_ko_pathways.txt  missing_ko_pathways.txt  stdout.txt  summary_pathways.txt  union_ko_contigs.txt
Tests/: test_pipeline.yml
Tools/: give_pathways.py  run_example.sh
Tools/Hmmscan/: Dockerfile  example_hmmscan.tbl  hmmscan.cwl  hmmscan.yml  stdout.txt
Tools/KEGG_pathways/: Dockerfile  give_pathways.py  kegg_pathways.cwl  kegg_pathways.yml  make_graphs.py
Tools/Modification/: modification_table.cwl  modification_table.yml
Tools/Parsing_hmmscan/: parsing_hmmscan.py  parsing_hmmscan.yml
Tools/Sed/: Dockerfile
Tools/test-input/: test
Tools/test-output/: test-out.summary.kegg_pathways.tsv
Workflow/: generate.sh  pipeline.cwl  pipeline.yml  sub_pipeline.cwl  sub_pipeline.yml
docker/: Dockerfile  help_commands.txt  run_pathways.sh
docs/: parse_hmmer_table.md  update_database.md
example/: example_hmmscan.summary.kegg_pathways.tsv  example_hmmscan_annotation.txt  example_list_kos.txt  example_summary_contigs.tsv  with_weights.summary.kegg.summary.kegg_contigs.tsv  with_weights.summary.kegg.summary.kegg_pathways.tsv
example/pathways_plots/: M00001  M00002  M00014  M00129
fetched_data/: changed.tsv  mediators_list.txt  modules_list.txt  modules_table.tsv
graphs/: README.md  get_dot.py  graphs.pkl  plot.py
graphs/dots/: M00001.dot  M00004.dot  M00009.dot  M00011.dot  M00012.dot  M00013.dot  M00017.dot  M00020.dot  M00023.dot  M00024.dot  M00025.dot  M00030.dot  M00031.dot  M00032.dot  M00033.dot  M00034.dot  M00035.dot  M00040.dot  M00042.dot  M00044.dot  M00045.dot  M00049.dot  M00050.dot  M00053.dot  M00060.dot  M00065.dot  M00066.dot  M00067.dot  M00068.dot  M00075.dot  M00076.dot  M00082.dot  M00083.dot  M00088.dot  M00089.dot  M00092.dot  M00094.dot  M00095.dot  M00098.dot  M00099.dot  (+159 more)
graphs/make_graph/: graphs.pkl
graphs_output/: graphs.pkl
kegg_pathways_completeness/graphs/: README.md  graphs.pkl
kegg_pathways_completeness/graphs/dots/: M00001.dot  M00002.dot  M00003.dot  M00004.dot  M00005.dot  M00006.dot  M00007.dot  M00008.dot  M00009.dot  M00010.dot  M00011.dot  M00012.dot  M00013.dot  M00014.dot  M00015.dot  M00016.dot  M00017.dot  M00018.dot  M00019.dot  M00020.dot  M00021.dot  M00022.dot  M00023.dot  M00024.dot  M00025.dot  M00026.dot  M00027.dot  M00028.dot  M00029.dot  M00030.dot  M00031.dot  (+361 more)
kegg_pathways_completeness/pathways_data/: README.md  all_pathways.txt  all_pathways_class.txt  all_pathways_names.txt  definition_separated.txt  fake-test  graphs.pkl  mediators_list.txt  modules_table.tsv
old_format/: all_pathways.txt  all_pathways_class.txt  all_pathways_names.txt
pathways/: all_pathways.txt  check_list_pathways.py  create.py  intermediate-file.txt  list_fixed_20200805.txt  list_pathways.txt
pathways_data/: README.md  all_pathways_class.txt  all_pathways_names.txt
pathways_data/2023_04_27/: all_pathways_class.txt
scripts/: update_kegg_database.sh
src/: README.md  hmmscan_tab.py
statistics/: statistics.py
tests/cwl/: test_pipeline.yml
tests/make_graphs/: test.txt
tests/unit/: test_fetch_modules_data.py  test_give_completeness.yml  test_give_pathways.yml  test_make_graphs.yml  test_parse_hmmtable.yml  test_plot_modules_graphs.yml
(+58 files in other folders)
