[project]
name = "kegg-pathways-completeness"
version = "1.0.5"
readme = "README.md"
license = {text = "Apache Software License 2.0"}
authors = [
  { name = "Ekaterina Sakharova", email = "kates@ebi.ac.uk" },
]
keywords = ["bioinformatics", "pipelines", "metagenomics", "kegg"]
description = "The tool counts completeness of each KEGG pathway for protein sequences."
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "biopython==1.83",
    "networkx==3.3",
    "graphviz==0.20.3"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "kegg_pathways_completeness",
    "kegg_pathways_completeness.bin", 
    "kegg_pathways_completeness.bin.generate_hmmtable",
    "kegg_pathways_completeness.bin.make_graphs",
    "kegg_pathways_completeness.bin.update_pathways_data",
    "kegg_pathways_completeness.graphs",
    "kegg_pathways_completeness.pathways_data"
]

[tool.setuptools.package-data]
"*" = ["graphs.pkl", "*.txt"]

[project.scripts]
give_pathways = "kegg_pathways_completeness.bin.give_pathways:main"
plot_completeness_graphs = "kegg_pathways_completeness.bin.plot_completeness_graphs:main"
generate_hmmtable = "kegg_pathways_completeness.bin.generate_hmmtable.hmmscan_tab:main"
parsing_hmmscan = "kegg_pathways_completeness.bin.generate_hmmtable.parsing_hmmscan:main"

[project.optional-dependencies]
dev = [
    "pre-commit==3.6.0",
    "black==24.4.2",
]
test = [
    "pytest==8.2.2",
    "pytest-workflow==2.1.0",
    "pytest-md==0.2.0",
]
